--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,10 @@
 extends layout
 
+
 block content
   h1= title
   p Welcome to #{title}
+  a(href="/new") Compose New Message 
+  ul
+    each message in messages
+      li #{message.text}, #{message.user}, #{message.added}
